--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" type="text/css" href="./styles.css" >
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- nav bar -->
