--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="signup">Signup</a></li>
             <li><a href="login">Login</a></li>
+            <li><a href="logout">Logout</a></li>
           </ul>
 
         </div>
