--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="https://cdn.jsdelivr.net/lodash/4.13.1/lodash.min.js"></script>
-    <script src="/src/adapter.js"></script>
+    <script src="/src/lib/adapter.js"></script>
+    <script src="/src/lib/glfx.js"></script>
     <script src='/bundle.js'></script>
   </body>
 
